Fixed test assertion to use the correct method for retrieving the first element.